--- a/estilos.css
+++ b/estilos.css
@@ -140,3 +140,28 @@ nav{
     overflow-y: scroll;
     overflow-x: hidden;
   }
+  #videoBG {
+    position:fixed;
+    z-index: -1;
+}
+@media (min-aspect-ratio: 16/9) {
+    #videoBG {
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    #videoBG { 
+        width:auto;
+        height: 100%;
+    }
+}
+@media (max-width: 767px) {
+    #videoBG {
+        display: none;
+    }
+    body {
+        background: black;
+        background-size: cover;
+    }
+}
