--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'Mukta', sans-serif;
     background: black;
+    align-items: center;
     color: whitesmoke;
 }
 
@@ -11,23 +12,22 @@ h1,h2,p,div{
 }
 
 .image-cropper {
-    width: 300px;
-    height: 300px;
-    align-content: center;
+    text-align:center;
+    width: 250px;
+    height: 250px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
     background-color: white;
+    object-position: center;
 }
 
 img {
-    text-align: center;
     display: inline;
     margin: 0 auto;
     height: 115%;
     width: auto;
-    align-self: center;
-    text-align: center;
+    align-content: center;
 }
 
   #videoBG{
