--- a/estilos.css
+++ b/estilos.css
@@ -34,8 +34,21 @@ img {
     width: 100%;
     height: fit-content;
     object-fit: fill;
-    position: fixed;
+    position: absolute;
     z-index: -1;
-    filter: blur(4px);
+    filter: blur(5px);
     background-color: black;
   }
+
+  /* Grade da foto */
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+  }
+
+  .item1 {
+    grid-column: 2 / 3;
+  }
+
+  /*fim grade da foto*/
+  
