--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,15 @@ h1,h2,p,div{
     color: whitesmoke;
 }
 
+#caixa_texto {
+    align-items: center;
+    border-radius: 15px 50px;
+    background: #0a045e9f;
+    padding: 30px; 
+    width: 500px;
+    height: 50px; 
+  } 
+
 .image-cropper {
     text-align:center;
     width: 250px;
@@ -37,17 +46,21 @@ img {
     position: absolute;
     z-index: -1;
     filter: blur(5px);
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.450);
   }
 
-  /* Grade da foto */
+  /* Grade da centralizada */
   .grid-container {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-content: center;
   }
 
-  .item1 {
-    grid-column: 2 / 3;
+  .item {
+    align-self: center;
+    justify-self: center;
   }
-  /*fim grade da foto*/
+  /*fim grade da centralizada*/
   
