--- a/estilos.css
+++ b/estilos.css
@@ -53,6 +53,7 @@ img {
   /* Grade da centralizada */
   .grid-container {
     display: grid;
+    grid-gap: 10px;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     align-items: center;
