--- a/loja/estilosloja.css
+++ b/loja/estilosloja.css
@@ -125,9 +125,9 @@ img {
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 40px;
   padding: 8px 12px;
-  position: absolute;
+  position:absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
@@ -189,7 +189,7 @@ input[type=text], select, textarea {
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
-  text-align: left;
+  text-align: center;
   resize: vertical;
 }
 
@@ -200,7 +200,7 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  text
+  text-align: center;
 }
 
 input[type=submit]:hover {
