--- a/hublinks-main/css/style.css
+++ b/hublinks-main/css/style.css
@@ -1,6 +1,6 @@
 body {
     /* Mudar cor do fundo */
-    background-color: #000000!important;
+    background-color: #b00ec5!important;
     /* Mudar família da fonte */
     font-family:'Montserrat', sans-serif!important;
     /* Mudar cor da fonte */
